Added synth modules and changed Color palette

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "enterjs",
+  "name": "homepage",
+  "homepage": "https://sebastian.wiendlocha.org",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
