--- a/backend_python/app.yaml
+++ b/backend_python/app.yaml
@@ -13,6 +13,7 @@ handlers:
     http_headers:
       Access-Control-Allow-Origin: "*"
     secure: always
+    expiration: 7d 0h
 
   - url: /cv.json
     mime_type: application/json
