--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "deploy:test": "cd ./backend_python && gcloud app deploy app.yaml --version=test"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "concurrently": "^3.6.0",
     "internal-ip": "^3.0.1",
     "public-ip": "^2.4.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.4",
+    "react-scripts": "^3.4.3",
     "source-map-explorer": "^1.7.0",
     "tone": "^0.12.80",
     "zingtouch": "^1.0.6"
