WIP: comitting current status (synth yet to be fixed and some refactoring needed)

--- a/backend_python/app.yaml
+++ b/backend_python/app.yaml
@@ -27,6 +27,16 @@ handlers:
     upload: www/index.html
     secure: always
 
+  - url: /cv
+    static_files: www/index.html
+    upload: www/index.html
+    secure: always
+
+  - url: /synth
+    static_files: www/index.html
+    upload: www/index.html
+    secure: always
+
   - url: /synth/
     static_files: www/index.html
     upload: www/index.html
