--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^1.1.0",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "detect-browser": "^5.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
