--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,11 @@
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^1.1.0",
+    "@types/jest": "^26.0.20",
+    "@types/material-ui": "^0.21.8",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "detect-browser": "^5.2.0",
@@ -13,13 +18,13 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "tone": "^14.7.58"
+    "tone": "^14.7.58",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build:node": "react-scripts build && rm -rf ../backend_node/build && cp ./build ../backend_node",
     "build:python": "react-scripts build && rm -rf ../backend_python/www && cp ./build ../backend_python/www && cp ../backend_python/cv.json ../backend_python/www",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev": "env=dev react-scripts start"
   },
