--- a/app/package.json
+++ b/app/package.json
@@ -6,23 +6,40 @@
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^1.1.0",
+    "@material-ui/styles": "^4.11.2",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.20",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "concurrently": "^5.3.0",
     "detect-browser": "^5.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.1",
     "tone": "^14.7.58",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "zingtouch": "^1.0.6"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "4.0.0",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "concurrently -r --kill-others \"node ../backend_node/server\" \"react-scripts start\" ",
     "build:node": "react-scripts build && rm -rf ../backend_node/build && cp ./build ../backend_node",
     "build:python": "react-scripts build && rm -rf ../backend_python/www && cp ./build ../backend_python/www && cp ../backend_python/cv.json ../backend_python/www",
     "eject": "react-scripts eject",
