--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "zingtouch": "^1.0.6"
   },
   "devDependencies": {
+    "@types/webmidi": "^2.0.4",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^7.2.0",
