WIP: something, probably
Co-authored-by: Fabian Meyer <meyer@sipgate.de>

--- a/backend_python/app.yaml
+++ b/backend_python/app.yaml
@@ -11,15 +11,15 @@ handlers:
   - url: /images
     static_dir: public/images
     http_headers:
-      Access-Control-Allow-Origin: "*"
+      Access-Control-Allow-Origin: '*'
     secure: always
-    expiration: 7d 0h
+    expiration: 1m 7d 0h
 
   - url: /cv.json
     mime_type: application/json
     static_dir: public/cv.json
     http_headers:
-      Access-Control-Allow-Origin: "*"
+      Access-Control-Allow-Origin: '*'
     secure: always
 
   - url: /cv/
@@ -46,5 +46,5 @@ handlers:
     static_files: www/\1
     upload: www/(.+)
     http_headers:
-      Access-Control-Allow-Origin: "*"
+      Access-Control-Allow-Origin: '*'
     secure: always
