--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^3.6.0",
     "react-scripts": "^4.0.1",
     "source-map-explorer": "^1.7.0",
+    "tone": "^14.8.15",
     "typescript": "^4.1.3"
   }
 }
