--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "^4.0.1",
     "tone": "^14.7.77",
     "typescript": "^4.1.3",
+    "webaudio-oscilloscope": "^3.2.1",
     "zingtouch": "^1.0.6"
   },
   "devDependencies": {
