--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "detect-browser": "^5.2.0",
+    "lodash": "^4.17.21",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -28,6 +29,7 @@
     "zingtouch": "^1.0.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "@types/webmidi": "^2.0.4",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
