--- a/app/package.json
+++ b/app/package.json
@@ -16,17 +16,15 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
-    "concurrently": "^5.3.0",
     "detect-browser": "^5.2.0",
     "lodash": "^4.17.21",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
     "tone": "^14.7.77",
     "typescript": "^4.1.3",
-    "webaudio-oscilloscope": "^3.2.1",
-    "zingtouch": "^1.0.6"
+    "zingtouch": "^1.0.6",
+    "react-scripts": "^4.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.172",
@@ -39,7 +37,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "4.0.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "concurrently": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,8 +47,9 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">0.5%",
       "not dead",
+      "not ie <= 11",
       "not op_mini all"
     ],
     "development": [
