--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "es6",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -16,8 +20,17 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
-  "exclude": ["src/**/_*.ts"],
-  "types": ["webmidi"],
-  "typeRoots": ["./node_modules/@types", "./src/types"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "src/**/_*.ts"
+  ],
+  "types": [
+    "webmidi"
+  ],
+  "typeRoots": [
+    "./node_modules/@types",
+    "./src/types"
+  ]
 }
