--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "source-map-explorer": "^1.7.0",
     "tone": "^14.8.15",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
