--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "template-full-stack",
   "scripts": {
     "analyze": "source-map-explorer 'app/build/static/js/*.js'",
-    "setup": "yarn && cd app && yarn && cd ../backend_node && yarn && cd .. && yarn build",
-    "dev:app": "cd app && yarn run dev",
-    "dev:api": "cd backend_node && node server.js",
     "start": "concurrently -r --kill-others \"yarn run dev:app\" \"yarn run dev:api\"",
     "cleanup": "rm -rf ./backend_python/www && rm -rf ./backend_node/build && rm -rf ./backend_python/public && rm -rf ./backend_node/public",
     "copy:build": "cp -r ./app/build ./backend_python/www && cp -r ./app/build ./backend_node/build",
@@ -13,8 +10,8 @@
     "start:node": "cd ./backend_node && yarn start",
     "start:python": "cd ./backend_python && yarn start",
     "deploy": "cd ./backend_python && gcloud app deploy app.yaml",
-    "deploy:v1": "cd ./backend_python && gcloud app deploy app.yaml --version=v1",
-    "deploy:test": "cd ./backend_python && gcloud app deploy app.yaml --version=test"
+    "preinstall": "cd app && yarn && cd ../backend_node && yarn",
+    "postinstall": "yarn build"
   },
   "dependencies": {
     "concurrently": "^3.6.0",
