--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "template-full-stack",
   "scripts": {
-    "analyze": "source-map-explorer 'app/build/static/js/*.js'",
     "dev:app": "cd app && yarn run dev",
     "dev:api": "cd backend_node && node server.js",
     "start": "concurrently -r --kill-others \"yarn run dev:app\" \"yarn run dev:api\"",
@@ -16,13 +15,6 @@
     "postinstall": "yarn build"
   },
   "dependencies": {
-    "concurrently": "^3.6.0",
-    "react-scripts": "^5.0.1",
-    "source-map-explorer": "^2.5.3",
-    "typescript": "^4.1.3"
-  },
-  "devDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "concurrently": "^3.6.0"
   }
 }
