--- a/app/package.json
+++ b/app/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "homepage",
-  "homepage": "https://sebastian.wiendlocha.org",
-  "version": "0.1.0",
+  "name": "vite",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^1.1.0",
     "@material-ui/styles": "^4.11.2",
-    "@types/classnames": "^2.2.11",
-    "@types/jest": "^26.0.20",
-    "@types/material-ui": "^0.21.8",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "detect-browser": "^5.2.0",
@@ -24,10 +23,23 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "tone": "^14.7.77",
-    "typescript": "^4.1.3",
     "zingtouch": "^1.0.6"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/material-ui": "^0.21.8",
+    "@types/node": "^14.14.22",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
     "@types/lodash": "^4.14.172",
     "@types/webmidi": "^2.0.4",
     "concurrently": "^5.3.0",
@@ -38,25 +50,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.0.0",
     "prettier": "^2.2.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "dev": "HTTPS=true SSL_CRT_FILE=~/localhost.pem SSL_KEY_FILE=~/localhost-key.pem env=dev react-scripts start"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not ie <= 11",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
