--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev:api": "cd backend_node && node server.js",
     "start": "concurrently -r --kill-others \"yarn run dev:app\" \"yarn run dev:api\"",
     "cleanup": "rm -rf ./backend_python/www && rm -rf ./backend_node/build && rm -rf ./backend_python/public && rm -rf ./backend_node/public",
-    "copy:build": "cp -r ./app/build ./backend_python/www && cp -r ./app/build ./backend_node/build",
+    "copy:build": "cp -r ./app/dist ./backend_python/www && cp -r ./app/dist ./backend_node/build",
     "copy:public": "cp -r ./public ./backend_python/ && cp -r ./public ./backend_node/ && cp ./public/cv.json ./backend_python/www",
     "build": "cd ./app && yarn build && cd .. && yarn cleanup && yarn copy:build && yarn copy:public",
     "start:node": "cd ./backend_node && yarn start",
